# time_sync

./: CMakeLists.txt  README.md  install_script.sh  passive_time_syncConfig.cmake.in
docs/: IEEEabrv.bib  IEEEtran.bst  documentation.aux  documentation.bbl  documentation.blg  documentation.out  documentation.tex  references.bib
docs/pictures/: UMLDiagram.vsdx
include/passive_time_sync/: passive_time_sync.h
src/: passive_time_sync.cpp
test_module/: CMakeLists.txt  test_time_sync.cpp
